# owned_chunks

./: Cargo.toml  README.md
src/: array.rs  lib.rs  vec.rs
