[package]
name = "owned_chunks"
version = "0.1.0"
edition = "2021"
authors = ["Liss Heidrich <Clueliss@users.noreply.github.com>"]
license = "MIT"
homepage = "https://github.com/Clueliss/owned_chunks"
description = "a collection of traits and iterators to get owned chunks from collections"

[dependencies]
